Add getBookById endpoint